# activegraph-monid

./: .env.example  .gitignore  README.md  pyproject.toml
src/research_agent/: __init__.py  cli.py  config.py  fork_cli.py  monid_client.py  monid_tools.py  pack.py  types.py
src/research_agent/behaviors/: __init__.py  _helpers.py  audit.py  budget_guard.py  decomposer.py  discoverer.py  extractor.py  input_builder.py  inspector.py  route_picker.py  runner.py  strategy_evaluator.py  strategy_planner.py  synthesizer.py  watcher.py
tests/: test_smoke.py
